# poly-notifier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
config/: default.toml  rewards-top2-balanced-i2-r20-c10.toml  rewards-top2-recommended-2026-03-25.toml  rewards-top2-safety.toml
crates/pn-admin/: Cargo.toml
crates/pn-admin/src/: auth.rs  handlers.rs  lib.rs  routes.rs
crates/pn-alert/: Cargo.toml
crates/pn-alert/src/: dedup.rs  engine.rs  lib.rs  rules.rs
crates/pn-bot/: Cargo.toml
crates/pn-bot/src/: commands.rs  dialogues.rs  handlers.rs  keyboards.rs  lib.rs
crates/pn-common/: Cargo.toml
crates/pn-common/src/: config.rs  db.rs  error.rs  events.rs  lib.rs  models.rs
crates/pn-lp/: Cargo.toml
crates/pn-lp/src/: control.rs  decision.rs  lib.rs  observability.rs  risk.rs  service.rs  signals.rs  types.rs
crates/pn-monitor/: Cargo.toml
crates/pn-monitor/src/: aggregator.rs  lib.rs  manager.rs  service.rs
crates/pn-notify/: Cargo.toml
crates/pn-notify/src/: lib.rs  rate_limiter.rs  service.rs  telegram.rs
crates/pn-polymarket/: Cargo.toml
crates/pn-polymarket/src/: clob.rs  gamma.rs  lib.rs  lp.rs  rewards.rs  types.rs  ws.rs
crates/pn-scheduler/: Cargo.toml
crates/pn-scheduler/src/: daily_summary.rs  lib.rs
crates/poly-notifier/: Cargo.toml
crates/poly-notifier/src/: guard.rs  lib.rs  main.rs  rewards_analyzer.rs  rewards_filter.rs  rewards_report.rs  shared_streams.rs
crates/poly-notifier/tests/: poly_rewards_filter.rs  rewards_filter.rs  rewards_report.rs  rewards_runtime_config.rs  shared_event_fanout.rs
docs/: lp-architecture.md  multi-market-review-fixes.md  polymarket-lp-parameter-guide.md
docs/plans/: 2026-03-19-lp-daemon-review-fixes.md  2026-03-23-condition-target-cli.md  2026-03-23-reward-aware-low-fill-lp.md  2026-03-24-guard-direct-cancel.md  2026-03-25-lp-audit-cli.md  2026-03-25-lp-audit-logs.md  2026-03-25-report-based-rewards-filter.md
migrations/: 001_create_users.sql  002_create_markets.sql  003_create_subscriptions.sql  004_create_alerts.sql  005_create_notifications.sql  006_create_feedback.sql  007_create_lp_tables.sql  008_add_lp_control_actor.sql  009_heartbeat_unique.sql  010_add_lp_market_scope.sql
outputs/rewards/: filtered-top2-safety.json  filtered.json  outer-balanced-i2-r20-c10.json  outer-balanced-i2-r20.json  outer-balanced-i2.json  outer-balanced-i3-r20-c15.json  outer-estday-i2-r20-c10.json  outer-safety-i2-r20.json  report.json  shortlist.toml
scripts/: admin.sh
