[workspace]
resolver = "2"
members = [
    "crates/pn-common",
    "crates/pn-polymarket",
    "crates/pn-monitor",
    "crates/pn-alert",
    "crates/pn-notify",
    "crates/pn-bot",
    "crates/pn-scheduler",
    "crates/pn-admin",
    "crates/poly-notifier",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Web & networking
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Telegram
teloxide = { version = "0.17", features = ["macros"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Numeric
rust_decimal = { version = "1", features = ["serde-with-str", "macros"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Config
config = "0.14"

# Concurrency
dashmap = "6"

# Internal crates
pn-common = { path = "crates/pn-common" }
pn-polymarket = { path = "crates/pn-polymarket" }
pn-monitor = { path = "crates/pn-monitor" }
pn-alert = { path = "crates/pn-alert" }
pn-notify = { path = "crates/pn-notify" }
pn-bot = { path = "crates/pn-bot" }
pn-scheduler = { path = "crates/pn-scheduler" }
pn-admin = { path = "crates/pn-admin" }
