[package]
name = "pn-polymarket"
version = "0.1.0"
edition = "2021"

[dependencies]
pn-common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
alloy = { version = "1.7.3", features = ["essentials"] }
polymarket-client-sdk = { version = "0.4.3", features = ["clob", "ws", "data", "gamma", "heartbeats", "ctf", "tracing"] }
