[package]
name = "poly-lp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poly-lp"
path = "src/main.rs"

[[bin]]
name = "poly-target"
path = "src/bin/poly-target.rs"

[dependencies]
pn-common = { workspace = true }
pn-polymarket = { workspace = true }
pn-notify = { workspace = true }
pn-lp = { workspace = true }
pn-admin = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
teloxide = { workspace = true }
rustls = "0.23"
