[package]
name = "poly-lp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poly-lp"
path = "src/main.rs"

[[bin]]
name = "poly-target"
path = "src/bin/poly-target.rs"

[[bin]]
name = "poly-guard"
path = "src/bin/poly-guard.rs"

[[bin]]
name = "poly-rewards"
path = "src/bin/poly-rewards.rs"

[[bin]]
name = "poly-rewards-filter"
path = "src/bin/poly-rewards-filter.rs"

[[bin]]
name = "poly-lp-audit"
path = "src/bin/poly-lp-audit.rs"

[dependencies]
pn-common = { workspace = true }
pn-polymarket = { workspace = true }
pn-notify = { workspace = true }
pn-lp = { workspace = true }
pn-admin = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
teloxide = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
rustls = "0.23"
